--- a/app/src/main/res/layout/activity_view_course.xml
+++ b/app/src/main/res/layout/activity_view_course.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorAccent">
+    android:background="@drawable/gradient">
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -78,6 +79,7 @@
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/text_margin"
                 android:typeface="sans"
+                android:textStyle="italic"
                 android:text="COURSE DESCRIPTION"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:layout_below="@id/textCourseName"
@@ -98,8 +100,77 @@
                 android:progressTint="@color/colorYellow"
                 android:progressBackgroundTint="@color/colorPrimaryDark"/>
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_below="@id/courseRatings"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:id="@+id/frameCourseDetails"
+                android:background="@drawable/text_view_login">
 
-            <!--<TextView
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="10dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="100"
+                        android:gravity="center_vertical">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Course by Mr. Somebody"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"
+                            android:typeface="sans"
+                            android:layout_weight="15"
+                            android:gravity="center_vertical"/>
+                        <ImageButton
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/info_icon_dark"
+                            android:layout_weight="85"
+                            android:backgroundTint="#00000000"
+                            android:gravity="end"/>
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Duration - 60 hours"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="18sp"
+                        android:typeface="sans"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Online Mode"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="18sp"
+                        android:typeface="sans"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Free of cost."
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="18sp"
+                        android:typeface="sans"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"/>
+                </LinearLayout>
+
+            </FrameLayout>
+            <!--
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
@@ -112,29 +183,25 @@
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:id="@+id/textCourseDetails"
-                android:background="@drawable/text_view_login"/>-->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/courseRatings"
-                android:id="@+id/textCourseDetails"
+                android:background="@drawable/text_view_login"/> -->
 
-                />
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/listIntroductoryMaterial"
-                android:layout_below="@id/textCourseDetails"
+                android:layout_below="@id/frameCourseDetails"
                 android:orientation="horizontal"
                 android:visibility="invisible"
                 android:layout_margin="@dimen/activity_vertical_margin"/>
 
             <TextView
+                android:id="@+id/textReviews"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/listIntroductoryMaterial"
-                android:text="Reviews."
-                android:textSize="@dimen/text_margin"
+                android:text="Reviews"
+                android:textSize="18sp"
+                android:textStyle="italic"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_margin="@dimen/activity_horizontal_margin" />
 
@@ -142,7 +209,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/listCourseReviews"
-                android:layout_below="@id/textCourseDetails"
+                android:layout_below="@id/textReviews"
                 android:orientation="vertical"
                 android:visibility="invisible"
                 android:layout_margin="@dimen/activity_vertical_margin"/>
