--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorPrimary">#063CDF</color>
     -->
     <color name="colorPrimaryDark">#11042E</color>
-    <color name="colorAccent">#6EC8FF</color>
+    <color name="colorAccent">#85CAF3</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlue">#03A9F4</color>
