--- a/app/src/main/res/layout/layout_custom_action_bar_view_course.xml
+++ b/app/src/main/res/layout/layout_custom_action_bar_view_course.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:src="@drawable/back_arrow"
         android:layout_weight="45"
+        android:id="@+id/action_bar_back_button"
         android:backgroundTint="#00000000"/>
 
     <TextView
@@ -18,6 +19,7 @@
         android:layout_height="match_parent"
         android:text="COURSE NAME"
         android:gravity="center"
+        android:id="@+id/action_bar_course_name"
         android:textSize="@dimen/text_margin"
         android:textColor="@color/colorPrimaryDark"
         android:typeface="sans"
