--- a/app/src/main/res/layout/course_review_card.xml
+++ b/app/src/main/res/layout/course_review_card.xml
@@ -1,61 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_horizontal"
-    android:layout_margin="3dp">
+    android:layout_marginTop="3dp">
 
 
     <androidx.cardview.widget.CardView
 
         android:id="@+id/courseReviewCard"
-        android:layout_width="320dp"
-        android:layout_height="160dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
         app:cardElevation="12dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/courseReviewImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="Course Representative Image"
-                android:scaleType="centerCrop"
-                android:src="@color/colorPrimary" />
+            android:orientation="vertical"
+            android:paddingTop="10dp"
+            android:background="@color/colorWhite">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/course_review_view"
-                android:textColor="@color/colorWhite"
-                android:layout_above="@+id/course_review_name"/>
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_margin"
+                android:text="My NAME IS KHAN"
+                android:gravity="center_vertical"
+                android:paddingStart="20dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                tools:ignore="RtlSymmetry" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/course_review_rating"
-                android:textColor="@color/colorWhite"
-                android:layout_above="@+id/course_review_view"/>
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_margin"
+                android:text="3.6/5"
+                android:gravity="center_vertical"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                tools:ignore="RtlSymmetry"
+                android:drawableEnd="@drawable/icon_star_dark"
+                android:drawablePadding="5dp"/>
 
             <TextView
                 android:id="@+id/course_review_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/courseReviewImage"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_margin="@dimen/text_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:textColor="@color/colorWhite"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:typeface="sans" />
-        </RelativeLayout>
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="italic"
+                android:textSize="@dimen/text_margin"
+                android:gravity="center_vertical"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                tools:ignore="RtlSymmetry"
+                android:text="Absolutely Excellent course with a really good instructor! Enjoyed really very much."/>
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
