--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:maxHeight="160dp"
             android:src="@drawable/alterbackground"
-            android:id="@+id/imgAddCourseCourseImage"
+            android:id="@+id/imgAddCourseImage"
             android:scaleType="centerCrop"
             android:contentDescription="Course Image" />
 
