--- a/app/src/main/res/layout/activity_add_course_contd.xml
+++ b/app/src/main/res/layout/activity_add_course_contd.xml
@@ -3,31 +3,34 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient">
+    android:background="@drawable/gradient"
+    android:theme="@style/AppTheme">
 
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="100"
+        android:id="@+id/linearLayout"
+        android:baselineAligned="false">
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="100"
-            android:padding="10dp"
-        android:id="@+id/linearLayout">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/back_arrow"
-                android:backgroundTint="#00000000"
-                android:layout_weight="85"
-                android:gravity="center"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="18sp"
-                android:textColor="@color/colorPrimaryDark"
-                android:text="Add Optional Introductory Content"
-                android:layout_weight="15"
-                android:gravity="center"/>
+            android:layout_height="match_parent"
+            android:src="@drawable/back_arrow"
+            android:backgroundTint="#00000000"
+            android:layout_weight="85"
+            android:gravity="center"
+            android:contentDescription="Back" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="Add Optional Introductory Content"
+            android:layout_weight="15"
+            android:gravity="center"
+            android:padding="10dp"/>
     </LinearLayout>
 
     <!--
@@ -51,7 +54,9 @@
         android:orientation="horizontal"
         android:layout_below="@id/linearLayout"
         android:layout_marginTop="48dp"
-        android:weightSum="90">
+        android:weightSum="90"
+        android:baselineAligned="false"
+        android:theme="@style/MaterialTheme">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -129,6 +134,7 @@
 
 
     <Button
+        android:theme="@style/AppTheme"
         android:id="@+id/btnAddCourse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
