--- a/app/src/main/res/layout/activity_add_course_contd.xml
+++ b/app/src/main/res/layout/activity_add_course_contd.xml
@@ -82,6 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:id="@+id/add_images_introductory"
             android:layout_weight="30">
             <com.google.android.material.button.MaterialButton
                 android:layout_width="108dp"
