--- a/app/src/main/res/layout/activity_add_course_contd.xml
+++ b/app/src/main/res/layout/activity_add_course_contd.xml
@@ -62,6 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:id="@+id/add_documents_introductory"
             android:layout_weight="30">
             <com.google.android.material.button.MaterialButton
                 android:layout_width="108dp"
@@ -103,6 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:id="@+id/add_video_introductory"
             android:layout_weight="30">
             <com.google.android.material.button.MaterialButton
                 android:layout_width="108dp"
