--- a/app/src/main/res/layout/activity_view_course.xml
+++ b/app/src/main/res/layout/activity_view_course.xml
@@ -211,11 +211,10 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:id="@+id/listIntroductoryMaterial"
                 android:layout_below="@id/frameCourseDetails"
                 android:orientation="horizontal"
-                android:visibility="visible"
                 android:layout_margin="@dimen/activity_vertical_margin"/>
 
             <TextView
@@ -234,7 +233,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/listCourseReviews"
                 android:layout_below="@id/textReviews"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:visibility="visible"
                 android:layout_margin="@dimen/activity_vertical_margin"/>
         </RelativeLayout>
