--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -22,51 +22,49 @@
         android:id="@+id/textAddCourseDetails"
         android:padding="10dp"/>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxHeight="160dp"
-        android:src="@drawable/background_alter"
-        android:id="@+id/frameAddCourseCourseImage"
-        android:layout_below="@id/textAddCourseDetails"
-        android:scaleType="centerCrop"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:contentDescription="Course Image">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxHeight="160dp"
-            android:src="@drawable/background_alter"
-            android:id="@+id/imgAddCourseImage"
-            android:scaleType="centerCrop"
-            android:contentDescription="Course Image" />
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:id="@+id/btnAddCourseImage"
-            android:src="@drawable/icon_add_photo"
-            android:layout_gravity="end"
-            android:layout_margin="12dp"
-            android:contentDescription="Add a Course Image"/>
-
-    </FrameLayout>
 
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/frameAddCourseCourseImage"
+        android:layout_below="@id/textAddCourseDetails"
         android:layout_above="@id/btnNext"
         android:layout_margin="@dimen/activity_vertical_margin">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:gravity="start"
-            >
+            android:gravity="start">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxHeight="160dp"
+                android:src="@drawable/background_alter"
+                android:id="@+id/frameAddCourseCourseImage"
+                android:scaleType="centerCrop"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxHeight="160dp"
+                    android:src="@drawable/background_alter"
+                    android:id="@+id/imgAddCourseImage"
+                    android:scaleType="centerCrop"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/btnAddCourseImage"
+                    android:src="@drawable/icon_add_photo"
+                    android:layout_gravity="end"
+                    android:layout_margin="12dp"
+                    tools:ignore="ContentDescription" />
+
+            </FrameLayout>
 
             <EditText
                 android:layout_width="match_parent"
@@ -78,7 +76,7 @@
                 android:background="@drawable/text_view_add_course"
                 android:padding="10dp"
                 android:layout_margin="@dimen/text_margin"
-                android:id="@+id/add_course_name"/>
+                android:id="@+id/add_course_name" />
 
             <EditText
                 android:layout_width="match_parent"
