Added Support For Registering For Courses

--- a/app/src/main/res/layout/activity_view_course.xml
+++ b/app/src/main/res/layout/activity_view_course.xml
@@ -242,6 +242,7 @@
     </ScrollView>
 
     <Button
+        android:id="@+id/view_course_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
