added basic profile page

--- a/app/src/main/res/menu/home_drawer_menu.xml
+++ b/app/src/main/res/menu/home_drawer_menu.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
     <item
-        android:title="Add Course"
+        android:title="@string/add_new_course"
         android:id="@+id/homeDrawerMenuItem1"
         android:icon="@drawable/add_box_icon"/>
     <item
-        android:title="Courses Taught"
+        android:title="@string/courses_taught"
         android:id="@+id/homeDrawerMenuItem2"
         android:icon="@drawable/add_box_icon"/>
-    <item
+ <!--   <item
         android:title="Title 3"
         android:id="@+id/homeDrawerMenuItem3"
         android:icon="@drawable/add_box_icon"/>
@@ -26,5 +26,5 @@
     <item
         android:title="Title 6"
         android:id="@+id/homeDrawerMenuItem6"
-        android:icon="@drawable/add_box_icon"/>
+        android:icon="@drawable/add_box_icon"/> -->
 </menu>
