--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -15,13 +15,14 @@
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:id="@+id/imgProfileImage"/>
 
-    <view
+    <!--<view
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@id/imgProfileImage"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"/>-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
