--- a/app/src/main/res/menu/home_drawer_menu.xml
+++ b/app/src/main/res/menu/home_drawer_menu.xml
@@ -11,7 +11,7 @@
         android:id="@+id/homeDrawerMenuItem2"
         android:icon="@drawable/add_box_icon"/>
     <item
-        android:title="Title 3"
+        android:title="View Your Profile"
         android:id="@+id/homeDrawerMenuItem3"
         android:icon="@drawable/add_box_icon"/>
 
