--- a/app/src/main/res/layout/activity_setup_2.xml
+++ b/app/src/main/res/layout/activity_setup_2.xml
@@ -38,7 +38,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_below="@id/userNameHolder"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="48dp"
         android:src="@drawable/default_person_image"
         app:civ_border_width="3dp"
