--- a/app/src/main/res/layout/layout_custom_action_bar_view_course.xml
+++ b/app/src/main/res/layout/layout_custom_action_bar_view_course.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,17 +13,18 @@
         android:src="@drawable/back_arrow"
         android:layout_weight="45"
         android:id="@+id/action_bar_back_button"
-        android:backgroundTint="#00000000"/>
+        android:backgroundTint="#00000000"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="COURSE NAME"
+        android:text="@string/course_name"
+        android:padding="5dp"
         android:gravity="center"
         android:id="@+id/action_bar_course_name"
-        android:textSize="@dimen/text_margin"
+        android:textSize="20sp"
         android:textColor="@color/colorPrimaryDark"
-        android:typeface="sans"
         android:textStyle="bold"
         android:layout_weight="10" />
 
@@ -31,7 +33,8 @@
         android:layout_height="match_parent"
         android:layout_weight="45"
         android:src="@drawable/menu_button"
-        android:backgroundTint="#00000000"/>
+        android:backgroundTint="#00000000"
+        tools:ignore="ContentDescription" />
 
 
 </LinearLayout>
