--- a/app/src/main/res/layout/teachers_viewof_course.xml
+++ b/app/src/main/res/layout/teachers_viewof_course.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient">
-    <!--
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!--
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,7 +16,7 @@
         android:id="@+id/linearLayoutTeachersViewOfCourse">
         <ImageButton
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="match_pare nt"
             android:src="@drawable/back_icon"
             android:backgroundTint="#0000"
             android:layout_weight="45"
@@ -41,70 +44,209 @@
             tools:ignore="ContentDescription" />
     </LinearLayout> -->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin">
-        <ImageView
+        <LinearLayout
+            android:id="@+id/linearLayoutCourseInfo"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:src="@drawable/background_alter"
-            android:scaleType="centerCrop"
-            tools:ignore="ContentDescription" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin">
+            <ImageView
+                android:id="@+id/imgCourseImage"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@drawable/background_alter"
+                android:scaleType="centerCrop"
+                tools:ignore="ContentDescription" />
+            <TextView
+                android:id="@+id/courseName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="bold"
+                android:textSize="24sp"
+                android:text="@string/course_details"
+                android:typeface="sans"
+                android:gravity="center_vertical" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="italic"
+                android:textSize="20sp"
+                android:text="Rating - */5"
+                android:typeface="normal"
+                android:gravity="center_vertical" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="italic"
+                android:textSize="20sp"
+                android:text="0 currently enrolled"
+                android:typeface="normal"
+                android:gravity="center_vertical" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="italic"
+                android:textSize="20sp"
+                android:text="Course started on *"
+                android:typeface="normal"
+                android:gravity="center_vertical" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="italic"
+                android:textSize="20sp"
+                android:text="0 % completed"
+                android:typeface="normal"
+                android:gravity="center_vertical" />
+        </LinearLayout>
         <TextView
+            android:id="@+id/textClassInfo"
+            android:layout_below="@id/linearLayoutCourseInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:textColor="@color/colorBlack"
             android:textStyle="bold"
             android:textSize="24sp"
-            android:text="Introduction to C"
+            android:text="@string/class_information"
             android:typeface="sans"
             android:gravity="center_vertical" />
+        <LinearLayout
+            android:id="@+id/linearLayoutNextLecture"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textClassInfo"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:orientation="horizontal"
+            android:weightSum="100">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="italic"
+                android:textSize="@dimen/text_margin"
+                android:text="@string/next_lecture_on"
+                android:typeface="normal"
+                android:gravity="center_vertical"
+                android:layout_weight="60"/>
+            <EditText
+                android:inputType="datetime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="italic"
+                android:textSize="@dimen/text_margin"
+                android:typeface="normal"
+                android:gravity="center_vertical"
+                android:layout_weight="40"
+                android:background="@drawable/text_view_add_course"/>
+        </LinearLayout>
+        <Button
+            android:id="@+id/btnScheduleClass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/linearLayoutNextLecture"
+            android:layout_margin="10dp"
+            android:background="@drawable/btn_rounded_rect"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/text_margin"
+            android:text="Schedule Class"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:layout_centerHorizontal="true"/>
+        <LinearLayout
+            android:id="@+id/linearLayoutMeetLink"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btnScheduleClass"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:orientation="horizontal"
+            android:weightSum="100">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="italic"
+                android:textSize="@dimen/text_margin"
+                android:text="@string/class_meeting_link"
+                android:typeface="normal"
+                android:gravity="center_vertical"
+                android:layout_weight="60"/>
+            <EditText
+                android:inputType="datetime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="italic"
+                android:textSize="@dimen/text_margin"
+                android:typeface="normal"
+                android:gravity="center_vertical"
+                android:layout_weight="40"
+                android:background="@drawable/text_view_add_course"/>
+        </LinearLayout>
         <TextView
+            android:id="@+id/textCourseResources"
+            android:layout_below="@id/linearLayoutMeetLink"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:textColor="@color/colorBlack"
-            android:textStyle="italic"
-            android:textSize="20sp"
-            android:text="Rating - 4.7/5"
-            android:typeface="normal"
-            android:gravity="center_vertical" />
-        <TextView
+            android:textStyle="bold"
+            android:textSize="24sp"
+            android:text="@string/course_resources"
+            android:typeface="sans"
+            android:gravity="center_vertical"/>
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/listCourseMaterial"
+            android:orientation="horizontal"
+            android:layout_below="@id/textCourseResources"
+            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
             android:padding="10dp"
-            android:textColor="@color/colorBlack"
-            android:textStyle="italic"
-            android:textSize="20sp"
-            android:text="47 currently enrolled"
-            android:typeface="normal"
-            android:gravity="center_vertical" />
-        <TextView
-            android:layout_width="match_parent"
+            android:background="@drawable/text_view_add_course"/>
+        <Button
+            android:id="@+id/btnUploadResources"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:layout_below="@id/listCourseMaterial"
+            android:layout_margin="10dp"
+            android:background="@drawable/btn_rounded_rect"
             android:textColor="@color/colorBlack"
-            android:textStyle="italic"
-            android:textSize="20sp"
-            android:text="Course started on 7/21/20"
-            android:typeface="normal"
-            android:gravity="center_vertical" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:textColor="@color/colorBlack"
-            android:textStyle="italic"
-            android:textSize="20sp"
-            android:text="37 % completed"
-            android:typeface="normal"
-            android:gravity="center_vertical" />
-    </LinearLayout>
-
-</RelativeLayout>
+            android:textSize="@dimen/text_margin"
+            android:text="@string/upload_resources"
+            android:drawableStart="@drawable/icon_upload"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:layout_centerHorizontal="true"
+            android:drawablePadding="10dp"/>
+    </RelativeLayout>
+</ScrollView>
