--- a/app/src/main/res/layout/activity_setup_1.xml
+++ b/app/src/main/res/layout/activity_setup_1.xml
@@ -42,9 +42,7 @@
         android:layout_below="@id/addInterest"
         android:layout_margin="@dimen/text_margin"
         android:id="@+id/listInterests"
-        android:background="@color/colorPrimary"/>
-
-
+        android:background="@drawable/text_view_login"/>
 
     <ProgressBar
         android:layout_width="match_parent"
