--- a/app/src/main/res/layout/layout_interests_recycler_view.xml
+++ b/app/src/main/res/layout/layout_interests_recycler_view.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:id="@+id/textdata"/>
-
+        android:textSize="@dimen/text_margin"
+        android:id="@+id/textdata"
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="bold"
+        android:padding="5dp"/>
 </LinearLayout>
